graphics(desktop): gate gl31/gl32 availability on the queried GL version (ISS-539)
DesktopApplication installed one AngleGL32 instance as gl20/gl30/gl31/gl32
unconditionally, so DesktopGraphics.gl31Available/gl32Available were always true
even though the EGL context is ES 3.0 — callers gating on them then invoked ES
3.1/3.2 entry points (glDispatchCompute etc.) on a 3.0 context, yielding GL
errors. Now query the real GL version (glGetIntegerv GL_MAJOR/MINOR_VERSION, with
a GL_VERSION string fallback) and install gl31 iff >=3.1, gl32 iff >=3.2 (gl30 iff
>=3.0, gl20 always). The instance still implements every present slot; only the
advertised availability is corrected. Shared scaladesktop → JVM + Native.

red:27675f9a (DesktopIntegrationTest GlVersionGateCheck subprocess: queries live
version 3.0, asserts gl31/gl32 Available match) fix:f9e1baf9 audit:PASS
(proof-of-red + mutation force-unconditional->red + JVM/Native compile).